# cpp-backend

./: .gitignore  README.md
backend/: CMakeLists.txt  Dockerfile
backend/data/: config.json
backend/scripts/: start.sh
backend/src/: main.cpp
backend/src/app/: app.cpp  app.h
backend/src/detector/: collision_detector.cpp  collision_detector.h
backend/src/generator/: loot_generator.h
backend/src/handler/: api_handler.cpp  api_handler.h  request_handler.cpp  request_handler.h
backend/src/loader/: json_loader.cpp  json_loader.h
backend/src/model/: model.cpp  model.h
backend/src/serialization/: model_serialization.h
backend/src/server/: http_server.cpp  http_server.h
backend/src/util/: boost_json.cpp  common.cpp  common.h  extra_data.h  tagged.h
backend/tests/: collision-detector-tests.cpp  loot_generator_tests.cpp  model_tests.cpp  state-serialization-tests.cpp
